--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Katie Luketa</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
+      <p>I am a security analyst for Marriott International</p>
+      <h1>Seattle, WA</h1>
       <p>Details here...</p>
       <h1>What are your favorite hobbies?</h1>
       <p>Details here...</p>
