--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I am a security analyst for Marriott International</p>
+      <h1>Where are you from?</h1>
+      <p>Seattle, WA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Boxing, lifting weights, studying Arabic, and dance</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>CIA Secret Agent</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle, WA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Coding is cool</p>
     </section>
 
     <footer id="footer">
